--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <section class="container">
         <form>
             <h1 class="hero-text">Find out which item sell online</h1>
             <p class="sub-hero">Your one place to get insight on which product is most popular & best selling
@@ -17,8 +17,8 @@
             <input autofocus id="search-field" type="text">
             <button type="submit" id="searchBtn">Search</button>
         </form>
-
-    </div>
+        <div id="resultSection">Append result here!</div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script src="js/app.js">
