--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <body>
     <section class="container">
-        <form>
+        <form id="submitForm">
             <h1 class="hero-text">Find out which item sell online</h1>
             <p class="sub-hero">Your one place to get insight on which product is most popular & best selling
                 <br> These insights will help you make better decision starting your online business today!</p>
             <input autofocus id="searchField" type="text">
             <button type="submit" id="searchBtn">Search</button>
         </form>
+        <p></p>
+        <img src="" alt="">
         <div id="resultSection">Append result here!</div>
     </section>
 
