--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <input autofocus id="searchField" type="text">
             <button type="submit" id="searchBtn">Search</button>
         </form>
-        <p></p>
+        <p class="searching"></p>
         <img src="" alt="">
-        <div id="resultSection">Append result here!</div>
+        <div id="resultSection"></div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
