padding added to api results

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         </form>
         <p class="searching"></p>
         <img src="" alt="">
-        <div id="resultSection"></div>
     </section>
+    <section id="resultSection"></section>
+
 
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script src="js/app.js">
