--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <section class="container">
         <form id="submitForm">
-            <h1 class="hero-text">Find out which item sell online</h1>
-            <p class="sub-hero">Your one place to get insight on which product is most popular & best selling
+            <h1 class="hero-text">Data is everything !</h1>
+            <p class="sub-hero">Get data on which product is most popular & best selling
                 <br> These insights will help you make better decision starting your online business today!</p>
             <input autofocus id="searchField" type="text" placeholder="lookup a product">
             <button type="submit" id="searchBtn">Search</button>
