price,description,currencyCode and title added to api call

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
         <p class="alertmsg"></p>
         <img src="" alt="">
     </section>
-    <section id="resultSection"></section>
+    <section id="resultSection">
+        <ul class="item-infos">
+            <li>
+                <h2 class=iteTitle>Gloves</h2>
+                <div class="itaemImage" style="background-image: url()"></div>
+                <div class="itemDetailsWrapper">
+                    <p class="itemPrice"><span class="itemCurrentcy">USD</span>9.99</p>
+                    <p class="itemViews">4420</p>
+                </div>
+                <p class="itemDescription"> Descritpion come here</p>
+            </li>
+        </ul>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
