styling added to item desc

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <h2 class=iteTitle>Gloves</h2>
                 <div class="itaemImage" style="background-image: url()"></div>
                 <div class="itemDetailsWrapper">
-                    <p class="itemPrice"><span class="itemCurrentcy">USD</span>9.99</p>
-                    <p class="itemViews">4420</p>
+                    <p class="itemPrice"><span class="itemCurrentcy">USD </span>9.99</p>
+                    <p class="itemViews">Views: </p>
                 </div>
-                <p class="itemDescription"> Descritpion come here</p>
+                <p class="itemDescription"> Item Descritpion </p>
             </li>
         </ul>
     </section>
