background image removed for simplistic

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <section id="resultSection">
         <ul class="item-infos">
             <li>
-                <h2 class=iteTitle>Gloves</h2>
+                <h2 class=iteTitle></h2>
                 <div class="itaemImage" style="background-image: url()"></div>
                 <div class="itemDetailsWrapper">
-                    <p class="itemPrice"><span class="itemCurrentcy">USD </span>9.99</p>
-                    <p class="itemViews">Views: </p>
+                    <p class="itemPrice"><span class="itemCurrentcy">  </span> </p>
+                    <p class="itemViews"> </p>
                 </div>
-                <p class="itemDescription"> Item Descritpion </p>
+                <p class="itemDescription"> </p>
             </li>
         </ul>
     </section>
