margin added between sub-hero and input field

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <section class="container">
         <form id="submitForm">
-            <h1 class="hero-text">Data is everything !</h1>
-            <p class="sub-hero">Get data on which product is most popular & best selling
-                <br> These insights will help you make better decision starting your online business today!</p>
+            <h1 class="hero-text">Simplistic is everything !</h1>
+            <p class="sub-hero">A better, cleaner and easy to use Etsy
+                <br> No ads, No featured items = no distraction</p>
             <input autofocus id="searchField" type="text" placeholder="lookup a product">
             <button type="submit" id="searchBtn">Search</button>
         </form>
