hero text modified

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form id="submitForm">
             <h1 class="hero-text">Simplistic is everything !</h1>
             <p class="sub-hero">A better, cleaner and easy to use Etsy
-                <br> No ads, No featured items = no distraction</p>
+                <br> No ads, No featured items = Better Shopping Experience</p>
             <input autofocus id="searchField" type="text" placeholder="lookup a product">
             <button type="submit" id="searchBtn">Search</button>
         </form>
