code cleaned up

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
+<div class="module">
+<div class="module darken">
     <section class="container">
         <form id="submitForm">
-            <h1 class="hero-text">Simplistic is everything !</h1>
-            <p class="sub-hero">A better, cleaner and easy to use Etsy
-                <br> No ads, No featured items = Better Shopping Experience</p>
+            <h1 class="hero-text">Simplicity is everything !</h1>
             <input autofocus id="searchField" type="text" placeholder="lookup a product">
             <button type="submit" id="searchBtn">Search</button>
         </form>
@@ -30,6 +30,8 @@
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script src="js/app.js">
     </script>
+    </div>
+    </div>
 </body>
 
 </html>
